--- a/translate_pack/VanillaSkills/assest/vanillaskills/lang/zh_cn.json
+++ b/translate_pack/VanillaSkills/assest/vanillaskills/lang/zh_cn.json
@@ -1,18 +1,18 @@
 {
-    "vanillaskills.notifi.skilllock_on":"\u6280\u80fd\u9501\u5b9a\u5df2\u5f00\u542f\uff01\u4e3b\u52a8\u80fd\u529b\u5c06\u4e0d\u518d\u4f1a\u81ea\u52a8\u89e6\u53d1",
-    "vanillaskills.notifi.skilllock_off":"\u6280\u80fd\u9501\u5b9a\u5df2\u5173\u95ed\uff01\u624b\u6301\u5bf9\u5e94\u7269\u54c1\u6309\u4e0b\u0053\u0068\u0069\u0066\u0074\u5373\u53ef\u89e6\u53d1\u4e3b\u52a8\u80fd\u529b",
-    "vanillaskills.skill.mining":"\u6316\u77ff",
-    "vanillaskills.skill.battle":"\u6218\u6597",
-    "vanillaskills.skill.magic":"\u9b54\u6cd5",
-    "vanillaskills.skill.herbal":"\u8349\u836f\u5b66",
-    "vanillaskills.skill.fishing":"\u9493\u9c7c",
-    "vanillaskills.skill.beekeepping":"\u517b\u8702",
-    "vanillaskills.notifi.act_enable":"\u53d1\u52a8\u6280\u80fd ",
-    "vanillaskills.notifi.act_cooling":" \u6280\u80fd\u6b63\u5728\u51b7\u5374\u4e2d\uff01\u5269\u4f59",
-    "vanillaskills.notifi.skill_locked":"\u6280\u80fd\u9501\u5b9a\u5904\u4e8e\u5f00\u542f\u72b6\u6001\uff0c\u4e3b\u52a8\u80fd\u529b\u65e0\u6cd5\u89e6\u53d1\u3002\u4f7f\u7528\u547d\u4ee4\u89e3\u9501\uff1a",
-    "vanillaskills.notifi.low_skill_level":" \u6280\u80fd\u7b49\u7ea7\u8fc7\u4f4e\uff01",
-    "vanillaskills.notifi.skill_ready":" \u6280\u80fd\u53ef\u4ee5\u518d\u6b21\u4f7f\u7528\u4e86\uff01",
-    "vanillaskills.act.mining":"\u8d85\u7ea7\u788e\u77f3\u673a",
-    "vanillaskills.act.battle":"\u5229\u5203\u7a81\u523a",
-    "vanillaskills.act.magic":"\u7fa4\u4f53\u6cbb\u6108"
+    "vanillaskills.notifi.skilllock_on":"技能锁定已开启！主动能力将不再会自动触发",
+    "vanillaskills.notifi.skilllock_off":"技能锁定已关闭！手持对应物品按下Shift即可触发主动能力",
+    "vanillaskills.skill.mining":"挖矿",
+    "vanillaskills.skill.battle":"战斗",
+    "vanillaskills.skill.magic":"魔法",
+    "vanillaskills.skill.herbal":"草药学",
+    "vanillaskills.skill.fishing":"钓鱼",
+    "vanillaskills.skill.beekeepping":"养蜂",
+    "vanillaskills.notifi.act_enable":"发动技能 ",
+    "vanillaskills.notifi.act_cooling":" 技能正在冷却中！剩余",
+    "vanillaskills.notifi.skill_locked":"技能锁定处于开启状态，主动能力无法触发。使用命令解锁：",
+    "vanillaskills.notifi.low_skill_level":" 技能等级过低！",
+    "vanillaskills.notifi.skill_ready":" 技能可以再次使用了！",
+    "vanillaskills.act.mining":"超级碎石机",
+    "vanillaskills.act.battle":"利刃突刺",
+    "vanillaskills.act.magic":"群体治愈"
 }
